--- a/requirements.txt
+++ b/requirements.txt
@@ -1,350 +1,10 @@
-absl-py==0.11.0
-aiofiles==0.5.0
-alabaster==0.7.12
-altgraph==0.17
-anaconda-client==1.7.2
-anaconda-navigator==1.10.0
-anaconda-project==0.8.3
-aniso8601==7.0.0
-anyio==3.2.1
-appnope==0.1.2
-argh==0.26.2
-argon2-cffi==20.1.0
-asn1crypto @ file:///tmp/build/80754af9/asn1crypto_1596577642040/work
-astroid @ file:///tmp/build/80754af9/astroid_1592495912941/work
-astropy==4.0.2
-astunparse==1.6.3
-async-exit-stack==1.0.1
-async-generator==1.10
-atomicwrites==1.4.0
-attrs==20.2.0
-auto-py-to-exe==2.9.0
-autopep8 @ file:///tmp/build/80754af9/autopep8_1596578164842/work
-Babel @ file:///tmp/build/80754af9/babel_1605108370292/work
-backcall==0.2.0
-backports.functools-lru-cache==1.6.1
-backports.shutil-get-terminal-size==1.0.0
-backports.tempfile==1.0
-backports.weakref==1.0.post1
-bcrypt==3.2.0
-beautifulsoup4 @ file:///tmp/build/80754af9/beautifulsoup4_1601924105527/work
-bitarray @ file:///tmp/build/80754af9/bitarray_1605065113847/work
-bkcharts==0.2
-bleach==3.2.1
-bokeh @ file:///tmp/build/80754af9/bokeh_1603297833684/work
-boto==2.49.0
-bottle==0.12.19
-bottle-websocket==0.2.9
-Bottleneck==1.3.2
-brotlipy==0.7.0
-cachetools==4.2.0
 certifi==2021.5.30
-cffi==1.14.3
-chardet==4.0.0
-click==7.1.2
-cloudpickle @ file:///tmp/build/80754af9/cloudpickle_1598884132938/work
-clyent==1.2.2
-colorama @ file:///tmp/build/80754af9/colorama_1603211150991/work
-conda==4.9.2
-conda-build==3.20.5
-conda-package-handling @ file:///tmp/build/80754af9/conda-package-handling_1603018141399/work
-conda-verify==3.4.2
-contextlib2==0.6.0.post1
-coverage==5.3
-cryptography==3.1.1
-cx-Oracle==8.0.1
-cycler==0.10.0
-Cython @ file:///tmp/build/80754af9/cython_1594831566883/work
-cytoolz==0.11.0
-dask @ file:///tmp/build/80754af9/dask-core_1602083700509/work
-dataclasses-json==0.5.4
-decorator==5.0.7
-defusedxml==0.6.0
-diff-match-patch @ file:///tmp/build/80754af9/diff-match-patch_1594828741838/work
-distributed @ file:///tmp/build/80754af9/distributed_1605066520644/work
-dnspython==2.0.0
-docutils==0.16
-ecdsa==0.14.1
-Eel==0.12.4
-email-validator==1.1.1
-entrypoints==0.3
-et-xmlfile==1.0.1
-exponent-server-sdk==2.0.0
-fastapi==0.61.1
-fastapi-jwt-auth==0.2.0
-fastapi-users==3.0.6
-fastapi-utils==0.2.1
-fastcache==1.1.0
-ffmpeg==1.4
-filelock==3.0.12
-flake8 @ file:///tmp/build/80754af9/flake8_1601911421857/work
-Flask==1.1.2
-Flask-Cors==3.0.10
-fsspec @ file:///tmp/build/80754af9/fsspec_1602684995936/work
-future==0.18.2
-gast==0.3.3
-gevent @ file:///tmp/build/80754af9/gevent_1601397537062/work
-gevent-websocket==0.10.1
-glob2==0.7
-gmpy2==2.0.8
-google-auth==1.4.2
-google-auth-oauthlib==0.4.2
-google-colab==1.0.0
-google-pasta==0.2.0
-graphene==2.1.8
-graphql-core==2.3.2
-graphql-relay==2.0.1
-greenlet @ file:///tmp/build/80754af9/greenlet_1600874013538/work
-grpcio==1.34.0
-h11==0.12.0
-h5py==2.10.0
-HeapDict==1.0.1
-helpdev==0.7.1
-html5lib @ file:///tmp/build/80754af9/html5lib_1593446221756/work
-httpcore==0.13.6
-httptools==0.1.1
-httpx==0.18.2
-idna==2.10
-imageio @ file:///tmp/build/80754af9/imageio_1594161405741/work
-imagesize==1.2.0
-importlib-metadata @ file:///tmp/build/80754af9/importlib-metadata_1602276842396/work
-iniconfig==1.1.1
-intervaltree @ file:///tmp/build/80754af9/intervaltree_1598376443606/work
-ipykernel==5.5.4
-ipython==7.23.1
-ipython-genutils==0.2.0
-ipywidgets @ file:///tmp/build/80754af9/ipywidgets_1601490159889/work
-isodate==0.6.0
-isort @ file:///tmp/build/80754af9/isort_1602603989581/work
-itsdangerous==1.1.0
-jdcal==1.4.1
-jedi==0.18.0
-jeepney @ file:///tmp/build/80754af9/jeepney_1605069705079/work
-Jinja2==2.11.3
-joblib @ file:///tmp/build/80754af9/joblib_1601912903842/work
-json5==0.9.5
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==6.1.7
-jupyter-console @ file:///tmp/build/80754af9/jupyter_console_1598884538475/work
-jupyter-core==4.7.0
-jupyterlab==2.2.9
-jupyterlab-pygments==0.1.2
-jupyterlab-server==1.2.0
-Keras-Preprocessing==1.1.2
-keyring @ file:///tmp/build/80754af9/keyring_1601490835422/work
-kiwisolver==1.3.1
-lazy-object-proxy==1.4.3
-libarchive-c==2.9
-llvmlite==0.34.0
-locket==0.2.0
-lxml @ file:///tmp/build/80754af9/lxml_1603216285000/work
-makefun==1.9.4
-Markdown==3.3.4
-MarkupSafe==1.1.1
-marshmallow==3.12.2
-marshmallow-enum==1.5.1
-matplotlib==3.3.3
-matplotlib-inline==0.1.2
-mccabe==0.6.1
-mistune==0.8.4
-mkl-fft==1.2.0
-mkl-random==1.1.1
-mkl-service==2.3.0
-mock==4.0.2
-more-itertools @ file:///tmp/build/80754af9/more-itertools_1605111547926/work
-MouseInfo==0.1.3
-mpmath==1.1.0
-msgpack==1.0.0
-multipledispatch==0.6.0
-mypy-extensions==0.4.3
-navigator-updater==0.2.1
-nbclient==0.5.1
-nbconvert==6.0.7
-nbformat==5.0.8
-nest-asyncio==1.4.3
-networkx @ file:///tmp/build/80754af9/networkx_1598376031484/work
-nltk @ file:///tmp/build/80754af9/nltk_1592496090529/work
-nose==1.3.7
-notebook==6.3.0
-numba @ file:///tmp/build/80754af9/numba_1600100669015/work
-numexpr==2.7.1
-numpy==1.18.5
-numpydoc @ file:///tmp/build/80754af9/numpydoc_1605117425582/work
+charset-normalizer==2.0.4
+idna==3.2
 oauthlib==3.1.1
-olefile==0.46
-openpyxl @ file:///tmp/build/80754af9/openpyxl_1598113097404/work
-opt-einsum==3.3.0
-orjson==3.4.0
-packaging==20.4
-pandas==0.24.2
-pandocfilters==1.4.3
-parso==0.8.2
-partd==1.1.0
-passlib==1.7.4
-path @ file:///tmp/build/80754af9/path_1598376507494/work
-pathlib2==2.3.5
-pathtools==0.1.2
-patsy==0.5.1
-pep8==1.7.1
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow @ file:///tmp/build/80754af9/pillow_1603822255246/work
-pkginfo==1.6.1
-pluggy==0.13.1
-ply==3.11
-pony==0.7.13
-portpicker==1.2.0
-prometheus-client==0.9.0
-promise==2.3
-prompt-toolkit==3.0.18
-protobuf==3.14.0
-psutil @ file:///tmp/build/80754af9/psutil_1598370257551/work
-psycopg2-binary==2.8.6
-ptyprocess==0.7.0
-pudb==2020.1
-py==1.9.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-PyAutoGUI==0.9.52
-pycodestyle==2.6.0
-pycosat==0.6.3
-pycparser==2.20
-pycurl==7.43.0.6
-pydantic==1.6.1
-pydocstyle @ file:///tmp/build/80754af9/pydocstyle_1598885001695/work
-pyflakes==2.2.0
-pygame==2.0.1
-PyGetWindow==0.0.9
-Pygments==2.9.0
-pyinstaller==4.3
-pyinstaller-hooks-contrib==2021.2
-PyJWT==1.7.1
-pylint @ file:///tmp/build/80754af9/pylint_1598623985952/work
-PyMsgBox==1.0.9
-PyMySQL==0.10.1
-pyodbc===4.0.0-unsupported
-pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1594392929924/work
-pyparsing==2.4.7
-PyPDF2==1.26.0
-pyperclip==1.8.1
-pypi-libavwrapper==0.0.1
-PyQt5==5.12.3
-PyQt5-sip==12.9.0
-PyQtWebEngine==5.12.1
-PyRect==0.1.4
-pyrsistent==0.17.3
-PyScreeze==0.1.26
 PySocks==1.7.1
-pytest==6.1.1
-pytest-cov==2.10.1
-python-dateutil==2.8.1
-python-dotenv==0.18.0
-python-jose==3.2.0
-python-jsonrpc-server @ file:///tmp/build/80754af9/python-jsonrpc-server_1600278539111/work
-python-language-server @ file:///tmp/build/80754af9/python-language-server_1600454544709/work
-python-multipart==0.0.5
-python-youtube==0.8.1
-python3-xlib==0.15
-PyTweening==1.0.3
-pytz==2020.1
-PyWavelets @ file:///tmp/build/80754af9/pywavelets_1601658317819/work
-pywhatkit==4.1
-pyxdg @ file:///tmp/build/80754af9/pyxdg_1603822279816/work
-PyYAML==5.3.1
-pyzmq==20.0.0
-QDarkStyle==2.8.1
-QtAwesome @ file:///tmp/build/80754af9/qtawesome_1602272867890/work
-qtconsole @ file:///tmp/build/80754af9/qtconsole_1600870028330/work
-QtPy==1.9.0
-regex @ file:///tmp/build/80754af9/regex_1602786672676/work
-requests==2.25.1
+requests==2.26.0
 requests-oauthlib==1.3.0
-rfc3986==1.5.0
-rope @ file:///tmp/build/80754af9/rope_1602264064449/work
-rsa==4.6
-Rtree==0.9.4
-ruamel_yaml==0.15.87
-Rx==1.6.1
-scikit-image==0.17.2
-scikit-learn @ file:///tmp/build/80754af9/scikit-learn_1598376899566/work
-scipy @ file:///tmp/build/80754af9/scipy_1597686649129/work
-seaborn @ file:///tmp/build/80754af9/seaborn_1600553570093/work
-SecretStorage==3.1.2
-selenium==3.141.0
-Send2Trash==1.5.0
-simplegeneric==0.8.1
-singledispatch @ file:///tmp/build/80754af9/singledispatch_1602523705405/work
-sip==4.19.13
 six==1.16.0
-sniffio==1.2.0
-snowballstemmer==2.0.0
-sockets==1.0.0
-sortedcollections==1.2.1
-sortedcontainers==2.2.2
-soupsieve==2.0.1
-Sphinx @ file:///tmp/build/80754af9/sphinx_1597428793432/work
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==1.0.3
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.4
-sphinxcontrib-websupport @ file:///tmp/build/80754af9/sphinxcontrib-websupport_1597081412696/work
-spotify-uri==1.0.3
-spotipy==2.18.0
-spyder @ file:///tmp/build/80754af9/spyder_1599056981321/work
-spyder-kernels @ file:///tmp/build/80754af9/spyder-kernels_1599056754858/work
-SQLAlchemy==1.3.20
-starlette==0.13.6
-statsmodels @ file:///tmp/build/80754af9/statsmodels_1602280205159/work
-stringcase==1.2.0
-sympy @ file:///tmp/build/80754af9/sympy_1605119542615/work
-tables==3.6.1
-tblib @ file:///tmp/build/80754af9/tblib_1597928476713/work
-tensorboard==2.4.0
-tensorboard-plugin-wit==1.7.0
-tensorflow==2.3.1
-tensorflow-estimator==2.3.0
-termcolor==1.1.0
-terminado==0.9.1
-testpath==0.4.4
-threadpoolctl @ file:///tmp/tmp9twdgx9k/threadpoolctl-2.1.0-py3-none-any.whl
-tifffile==2020.10.1
-toml==0.10.2
-toolz @ file:///tmp/build/80754af9/toolz_1601054250827/work
-tornado==6.1
-tqdm @ file:///tmp/build/80754af9/tqdm_1602185206534/work
-traitlets==5.0.5
 tweepy==3.10.0
-twilio==6.56.0
-typing==3.7.4.3
-typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1598376058250/work
-typing-inspect==0.7.1
-ujson==3.2.0
-unicodecsv==0.14.1
 urllib3==1.26.6
-urwid==2.1.2
-uvicorn==0.11.8
-uvloop==0.14.0
-watchdog @ file:///tmp/build/80754af9/watchdog_1593447344699/work
-wcwidth==0.2.5
-webencodings==0.5.1
-websockets==8.1
-Werkzeug==1.0.1
-whichcraft==0.6.1
-widgetsnbextension==3.5.1
-wikipedia==1.4.0
-wrapt==1.12.1
-wurlitzer @ file:///tmp/build/80754af9/wurlitzer_1594753850195/work
-xlrd==1.2.0
-XlsxWriter @ file:///tmp/build/80754af9/xlsxwriter_1602692860603/work
-xlwt==1.3.0
-xmltodict==0.12.0
-yapf @ file:///tmp/build/80754af9/yapf_1593528177422/work
-youtube-dl==2021.6.6
-youtube-search-python==1.4.6
-zict==2.0.0
-zipp @ file:///tmp/build/80754af9/zipp_1604001098328/work
-zope.event==4.5.0
-zope.interface @ file:///tmp/build/80754af9/zope.interface_1602002420968/work
